[package]
name = "rustracts"
version = "0.2.0-alpha.3"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "Rust crate for cancellable time based contracts in async/await"

homepage = "https://github.com/hyyking/rustracts"
repository = "https://github.com/hyyking/rustracts"
documentation="https://docs.rs/rustracts"

keywords = ["async", "await", "contract", "futures"]
categories = ["futures", "async/await", "contracts"]


[dependencies]
futures-preview = "0.3.0-alpha.19"
pin-utils =  "0.1.0-alpha.4"

[dev-dependencies]
