[package]
name = "parc"
version = "1.0.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "Rust crate for cancellable time based contracts in async/await"

homepage = "https://github.com/hyyking/rustracts/tree/master/parc"
repository = "https://github.com/hyyking/rustracts/tree/master/parc"
documentation="https://docs.rs/parc"

keywords = ["arc", "reference-counting", "sync", "datastructure"]
categories = ["memory-management", "no-std", "rust-patterns"]

[features]
default = ["std"]
std = []
